--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -83,24 +83,24 @@
                     <p:messages closable="true"/>
 
                     <div class="form-group has-feedback">
-                        <p:inputText value="#{logonMB.email}" type="email" styleClass="form-control" placeholder="Just type any value"
+                        <p:inputText value="#{loginMB.email}" type="email" styleClass="form-control" placeholder="Just type any value"
                                      required="true"
                                      requiredMessage="Email is required."/>
                         <i class="fa fa-envelope form-control-feedback" ></i>
                     </div>
                     <div class="form-group has-feedback">
-                        <p:inputText value="#{logonMB.password}" type="password" styleClass="form-control"
+                        <p:inputText value="#{loginMB.password}" type="password" styleClass="form-control"
                                      placeholder="Just type any value" required="true"
                                      requiredMessage="Password is required."/>
                         <i class="fa fa-lock form-control-feedback" style="font-size: 18px"></i>
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <p:selectBooleanCheckbox itemLabel="Remember Me" value="#{logonMB.remember}"/>
+                            <p:selectBooleanCheckbox itemLabel="Remember Me" value="#{loginMB.remember}"/>
                         </div>
                         <p:spacer height="10"/>
                         <div class="col-xs-12">
-                            <p:commandButton styleClass="btn btn-success btn-block" action="#{logonMB.login}" onclick="showBar()" oncomplete="if(args.validationFailed){hideBar()}"
+                            <p:commandButton styleClass="btn btn-success btn-block" action="#{loginMB.login}" onclick="showBar()" oncomplete="if(args.validationFailed){hideBar()}"
                                              value="Sign In" update="@form"/>
                         </div>
                     </div>
